--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: worker
-    name: solana-tracker
-    env: node
+    name: solana-python-worker
+    env: python
     plan: free
-    buildCommand: "npm install"
-    startCommand: "node index.js"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python index.py"
     autoDeploy: true
