--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: solana-python-worker
     env: python
     plan: free
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "python index.py"
     autoDeploy: true
